fixed commenting method

--- a/resume/index.html
+++ b/resume/index.html
@@ -9,7 +9,7 @@
 		</style>
 	</head>
 	<body>
-		<!I built this myself, and it's not half shabby>
+		<!--I built this myself, and it's not half shabby-->
 		<h1>Rachel Logan</h1>
 		<img src="headshot.jpg" alt="Image description: a headshot of Rachel outside." width=300>
 		<ul>
@@ -51,6 +51,6 @@
 			<li>Software: Adobe InDesign, Adobe Photoshop, Microsoft Excel</li>
 		</ul>
 		<br><br><br><br><br><br><br><br><br><br><br><br>
-		<!Breaks because I like being able to put the last line of a text block in the middle of a webpage.>
+		<!--Breaks because I like being able to put the last line of a text block in the middle of a webpage.-->
 	</body>
 </html>
