style.css added for formatting

--- a/resume/index.html
+++ b/resume/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang = "en">
+
 	<head>
 		<title>
 			Rachel Logan Resume
 		</title>
-		<style>
-			h1{color:blue;font-size:36px;}
-		</style>
+		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
+
 	<body>
 		<!--I built this myself, and it's not half shabby-->
 		<h1>Rachel Logan</h1>
