--- a/resume/index.html
+++ b/resume/index.html
@@ -5,13 +5,17 @@
 		<title>
 			Rachel Logan Resume
 		</title>
+
+		<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,600;1,400&display=swap" rel="stylesheet">
+
 		<link rel="stylesheet" type="text/css" href="style.css">
+
 	</head>
 
 	<body>
 		<!--I built this myself, and it's not half shabby-->
 		<h1>Rachel Logan</h1>
-		<img src="headshot.jpg" alt="Image description: a headshot of Rachel outside." width=300>
+		<!--<img src="headshot.jpg" alt="Image description: a headshot of Rachel outside." width=300>-->
 		<ul>
 			<li>dec11rll@gmail.com</li>
 			<li><a href="https://www.linkedin.com/in/rachel-logan-a72258118/">LinkedIn</a></li>
@@ -19,7 +23,7 @@
 			<li><a href="https://github.com/rachelll4">Github</a></li>
 		</ul>
 
-		<b>Reporter and Software Engineer</b>
+		<b class="title">Reporter and Software Engineer</b>
 		<p>Masters of Journalism student at University of Maryland with AP-style newsroom experience; Software consultant with skills in C#, Python, Java, C++. Quick learner with leadership skills and enthusiasm.</p>
 
 		<h2>Experience:</h2>
