did h1, h2, h3 changes to div and styles

--- a/resume/index.html
+++ b/resume/index.html
@@ -14,7 +14,7 @@
 
 	<body>
 		<!--I built this myself, and it's not half shabby-->
-		<h1>Rachel Logan</h1>
+		<div id="name">Rachel Logan</div>
 		<!--<img src="headshot.jpg" alt="Image description: a headshot of Rachel outside." width=300>-->
 		<ul>
 			<li>dec11rll@gmail.com</li>
@@ -23,32 +23,32 @@
 			<li><a href="https://github.com/rachelll4">Github</a></li>
 		</ul>
 
-		<b class="title">Reporter and Software Engineer</b>
+		<b>Reporter and Software Engineer</b>
 		<p>Masters of Journalism student at University of Maryland with AP-style newsroom experience; Software consultant with skills in C#, Python, Java, C++. Quick learner with leadership skills and enthusiasm.</p>
 
-		<h2>Experience:</h2>
-		<h3>Staff Writer</h3>
+		<div class="sectionheader">Experience:</div>
+		<div class="jobtitle">Staff Writer</div>
 		<h4>College Park Here & Now</h4>
 		<h5>June 2020 - Present</h5>
 		<p>Wrote community-focused articles for a monthly publication, took occasional photos. </p>
 
-		<h3>Software Engineer</h3>
+		<div class="jobtitle">Software Engineer</div>
 		<h4>Czarnek and Orkin Laboratories</h4>
 		<h5>April 2019 - May 2020</h5>
 		<p>Wrote code supporting a pill-counting pharmaceutical machine, including code to introduce a user interface, hardware auxiliary devices and databases.</p>
 
-		<h3>Staff Writer and Editor</h3>
+		<div class="jobtitle">Staff Writer and Editor</div>
 		<h4>The Pitt-Johnstown Advocate</h4>
 		<h5>September 2015 - March 2019</h5>
 		<p>Regularly wrote and copy edited campus-oriented articles on a weekly basis. I sat as Opinions, News and Features section editors during my time there, and covered presidential rallies, new buildings and food service disasters.</p>
 
-		<h2>Education:</h2>
+		<div class="sectionheader">Education:</div>
 		<ul>
 			<li>BS, Computer Engineering, University of Pittsburgh-Johnstown, April 2019</li>
 			<li>MJ, Journalism, University of Maryland, May 2022</li>
 		</ul>
 
-		<h2>Skills:</h2>
+		<div class="sectionheader">Skills:</div>
 		<ul>
 			<li>Reporting: AP style, interviewing, working under deadline</li>
 			<li>Coding languages: C#, Python, Java, Matlab, assembly</li>
