changed h4 and p styles, classes

--- a/resume/index.html
+++ b/resume/index.html
@@ -24,23 +24,23 @@
 		</ul>
 
 		<b>Reporter and Software Engineer</b>
-		<p>Masters of Journalism student at University of Maryland with AP-style newsroom experience; Software consultant with skills in C#, Python, Java, C++. Quick learner with leadership skills and enthusiasm.</p>
+		<p class="description">Masters of Journalism student at University of Maryland with AP-style newsroom experience; Software consultant with skills in C#, Python, Java, C++. Quick learner with leadership skills and enthusiasm.</p>
 
 		<div class="sectionheader">Experience:</div>
 		<div class="jobtitle">Staff Writer</div>
-		<h4>College Park Here & Now</h4>
-		<h5>June 2020 - Present</h5>
-		<p>Wrote community-focused articles for a monthly publication, took occasional photos. </p>
+		<div class="organization">College Park Here & Now</div>
+		<div class="date">June 2020 - Present</div>
+		<p class="description">Wrote community-focused articles for a monthly publication, took occasional photos. </p>
 
 		<div class="jobtitle">Software Engineer</div>
-		<h4>Czarnek and Orkin Laboratories</h4>
-		<h5>April 2019 - May 2020</h5>
-		<p>Wrote code supporting a pill-counting pharmaceutical machine, including code to introduce a user interface, hardware auxiliary devices and databases.</p>
+		<div class="organization">Czarnek and Orkin Laboratories</div>
+		<div class="date">April 2019 - May 2020</div>
+		<p class="description">Wrote code supporting a pill-counting pharmaceutical machine, including code to introduce a user interface, hardware auxiliary devices and databases.</p>
 
 		<div class="jobtitle">Staff Writer and Editor</div>
-		<h4>The Pitt-Johnstown Advocate</h4>
-		<h5>September 2015 - March 2019</h5>
-		<p>Regularly wrote and copy edited campus-oriented articles on a weekly basis. I sat as Opinions, News and Features section editors during my time there, and covered presidential rallies, new buildings and food service disasters.</p>
+		<div class="organization">The Pitt-Johnstown Advocate</div>
+		<div class="date">September 2015 - March 2019</div>
+		<p class="description">Regularly wrote and copy edited campus-oriented articles on a weekly basis. I sat as Opinions, News and Features section editors during my time there, and covered presidential rallies, new buildings and food service disasters.</p>
 
 		<div class="sectionheader">Education:</div>
 		<ul>
