finished adding styles
tried to make it look exactly right, but I feel like I missed some instructions last time so I threw some stuff in to make it match

--- a/resume/index.html
+++ b/resume/index.html
@@ -13,48 +13,48 @@
 	</head>
 
 	<body>
-		<!--I built this myself, and it's not half shabby-->
-		<div id="name">Rachel Logan</div>
-		<!--<img src="headshot.jpg" alt="Image description: a headshot of Rachel outside." width=300>-->
-		<ul>
-			<li>dec11rll@gmail.com</li>
-			<li><a href="https://www.linkedin.com/in/rachel-logan-a72258118/">LinkedIn</a></li>
-			<li><a href="https://twitter.com/arobotwriting">Twitter</a></li>
-			<li><a href="https://github.com/rachelll4">Github</a></li>
-		</ul>
+		<div id="container">
+			<!--I built this myself, and it's not half shabby-->
+			<div id="name">Rachel Logan</div>
+			<!--<img src="headshot.jpg" alt="Image description: a headshot of Rachel outside." width=300>-->
+			<ul class="menu">
+				<li>dec11rll@gmail.com</li>
+				<li><a href="https://www.linkedin.com/in/rachel-logan-a72258118/">LinkedIn</a></li>
+				<li><a href="https://twitter.com/arobotwriting">Twitter</a></li>
+				<li><a href="https://github.com/rachelll4">Github</a></li>
+			</ul>
 
-		<b>Reporter and Software Engineer</b>
-		<p class="description">Masters of Journalism student at University of Maryland with AP-style newsroom experience; Software consultant with skills in C#, Python, Java, C++. Quick learner with leadership skills and enthusiasm.</p>
+			<div id="title">Reporter and Software Engineer</div>
+			<p class="description top">Masters of Journalism student at University of Maryland with AP-style newsroom experience; Software consultant with skills in C#, Python, Java, C++. Quick learner with leadership skills and enthusiasm.</p>
 
-		<div class="sectionheader">Experience:</div>
-		<div class="jobtitle">Staff Writer</div>
-		<div class="organization">College Park Here & Now</div>
-		<div class="date">June 2020 - Present</div>
-		<p class="description">Wrote community-focused articles for a monthly publication, took occasional photos. </p>
+			<div class="sectionheader">Experience:</div>
+			<div class="jobtitle">Staff Writer</div>
+			<div class="organization">College Park Here & Now</div>
+			<div class="date">June 2020 - Present</div>
+			<p class="description">Wrote community-focused articles for a monthly publication, took occasional photos. </p>
 
-		<div class="jobtitle">Software Engineer</div>
-		<div class="organization">Czarnek and Orkin Laboratories</div>
-		<div class="date">April 2019 - May 2020</div>
-		<p class="description">Wrote code supporting a pill-counting pharmaceutical machine, including code to introduce a user interface, hardware auxiliary devices and databases.</p>
+			<div class="jobtitle">Software Engineer</div>
+			<div class="organization">Czarnek and Orkin Laboratories</div>
+			<div class="date">April 2019 - May 2020</div>
+			<p class="description">Wrote code supporting a pill-counting pharmaceutical machine, including code to introduce a user interface, hardware auxiliary devices and databases.</p>
 
-		<div class="jobtitle">Staff Writer and Editor</div>
-		<div class="organization">The Pitt-Johnstown Advocate</div>
-		<div class="date">September 2015 - March 2019</div>
-		<p class="description">Regularly wrote and copy edited campus-oriented articles on a weekly basis. I sat as Opinions, News and Features section editors during my time there, and covered presidential rallies, new buildings and food service disasters.</p>
+			<div class="jobtitle">Staff Writer and Editor</div>
+			<div class="organization">The Pitt-Johnstown Advocate</div>
+			<div class="date">September 2015 - March 2019</div>
+			<p class="description">Regularly wrote and copy edited campus-oriented articles on a weekly basis. I sat as Opinions, News and Features section editors during my time there, and covered presidential rallies, new buildings and food service disasters.</p>
 
-		<div class="sectionheader">Education:</div>
-		<ul>
-			<li>BS, Computer Engineering, University of Pittsburgh-Johnstown, April 2019</li>
-			<li>MJ, Journalism, University of Maryland, May 2022</li>
-		</ul>
+			<div class="sectionheader">Education:</div>
+			<ul id="degrees">
+				<li>BS, Computer Engineering, University of Pittsburgh-Johnstown, April 2019</li>
+				<li>MJ, Journalism, University of Maryland, May 2022</li>
+			</ul>
 
-		<div class="sectionheader">Skills:</div>
-		<ul>
-			<li>Reporting: AP style, interviewing, working under deadline</li>
-			<li>Coding languages: C#, Python, Java, Matlab, assembly</li>
-			<li>Software: Adobe InDesign, Adobe Photoshop, Microsoft Excel</li>
-		</ul>
-		<br><br><br><br><br><br><br><br><br><br><br><br>
-		<!--Breaks because I like being able to put the last line of a text block in the middle of a webpage.-->
+			<div class="sectionheader">Skills:</div>
+			<ul id="do">
+				<li><strong>Reporting:</strong> AP style, interviewing, working under deadline</li>
+				<li><strong>Coding languages:</strong> C#, Python, Java, Matlab, assembly</li>
+				<li><strong>Software:</strong> Adobe InDesign, Adobe Photoshop, Microsoft Excel</li>
+			</ul>
+		</div>
 	</body>
 </html>
