added font awesome links

--- a/Resume/index.html
+++ b/Resume/index.html
@@ -11,6 +11,9 @@
 		<!--Google Fonts-->
 		<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
 
+		<!--Font Awesome-->
+		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.7/css/all.css">
+
 		<!--Normal CSS-->
 		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
@@ -37,6 +40,11 @@
 		      </li>
 		      <li class="nav-item active">
 		        <a class="nav-link" href="#Portfolio">Portfolio <span class="sr-only">(current)</span></a>
+		      </li>
+		      <li class="nav-item active">
+		      	<a target=_blank class="social" href="https://twitter.com/arobotwriting"><i class="fab fa-twitter-square"></i></a>
+		      	<a target=_blank class="social" href="https://www.facebook.com/profile.php?id=100009171776994"><i class="fab fa-facebook-square"></i></a>
+		      	<a target=_blank class="social" href="https://www.linkedin.com/in/rachel-logan-a72258118/"><i class="fab fa-linkedin"></i></i></a>
 		      </li>
 		    </ul>
 		  </div>
