--- a/Resume/index.html
+++ b/Resume/index.html
@@ -42,9 +42,9 @@
 		        <a class="nav-link" href="#Portfolio">Portfolio <span class="sr-only">(current)</span></a>
 		      </li>
 		      <li class="nav-item active">
-		      	<a target=_blank class="social" href="https://twitter.com/arobotwriting"><i class="fab fa-twitter-square"></i></a>
-		      	<a target=_blank class="social" href="https://www.facebook.com/profile.php?id=100009171776994"><i class="fab fa-facebook-square"></i></a>
-		      	<a target=_blank class="social" href="https://www.linkedin.com/in/rachel-logan-a72258118/"><i class="fab fa-linkedin"></i></i></a>
+		      	<a target=_blank href="https://twitter.com/arobotwriting"><i class="fab fa-twitter-square social"></i></a>
+		      	<a target=_blank href="https://www.facebook.com/profile.php?id=100009171776994"><i class="fab fa-facebook-square social"></i></a>
+		      	<a target=_blank href="https://www.linkedin.com/in/rachel-logan-a72258118/"><i class="fab fa-linkedin social"></i></i></a>
 		      </li>
 		    </ul>
 		  </div>
