--- a/html-template/html-template.html
+++ b/html-template/html-template.html
@@ -58,35 +58,33 @@
 				<p class="caption">Water drops cling to flowers after a storm.<span class="photo-cred">Rachel Logan/JOUR670</span></p>
 			</div>
 
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>			
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>		
 
 
+			<!--BEGIN Grid system from bootstrap-->
+			<div class="container">
+		        <div class="row">
+
+		            <div class="col-md-4">
+		                <p class="chapter-top">Heading 1</p>
+		                <p>words</p>
+		            </div>
+
+		            <div class="col-md-4">
+		                <p class="chapter-top">Heading 2</p>
+		                <p>WORDS</p>
+		            </div>
+
+		            <div class="col-md-4">
+		                <p class="chapter-top">Heading 3</p>
+		                <p><strong>WORDS</strong></p>
+		            </div>
+		        </div>
+			</div>
+			<!--END Grid system from bootstrap-->
 
 		</div>
 
-
-
-		<!--BEGIN Grid system from bootstrap-->
-		<div class="container">
-	        <div class="row">
-
-	            <div class="col-md-4">
-	                <h3>Heading 1</h3>
-	                <p>words</p>
-	            </div>
-
-	            <div class="col-md-4">
-	                <h3>Heading 2</h3>
-	                <p>WORDS</p>
-	            </div>
-
-	            <div class="col-md-4">
-	                <h3>Heading 3</h3>
-	                <p><strong>WORDS</strong></p>
-	            </div>
-	        </div>
-		</div>
-		<!--END Grid system from bootstrap-->
 
 		<div id="footer">
 			<p>Copyright Rachel Logan</p>
