dropped in text

--- a/Final/index.html
+++ b/Final/index.html
@@ -44,21 +44,121 @@
 		<!--END Navbar from bootstrap-->
 
 		<div id="body">
+			<p class="chatter">This year, roughly a quarter of the vast Pantanal wetland in Brazil, one of the most biodiverse places on Earth, has burned in wildfires worsened by climate change. What happens to a rich and unique biome when so much is destroyed? </p>
+			<p id="headline">Pantanal Wetland Fires in 2020</p>
+			<p id="byline">By Scott Reinhard and Blacki Migliozzi</p>
 
-			<p id="headline">Headline</p>
-			<p id="byline">By Byline</p>
-
-			<p class="chapter-top">Chapter Headline</p>
-
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			<p>The unprecedented fires in the wetland have attracted less attention than blazes in Australia, the Western United States and the Amazon, its celebrity sibling to the north. But while the Pantanal is not a global household name, tourists in the know flock there because it is home to exceptionally high concentrations of breathtaking wildlife: Jaguars, tapirs, endangered giant otters and bright blue hyacinth macaws. Like a vast tub, the wetland swells with water during the rainy season and empties out during the dry months. Fittingly, this rhythm has a name that evokes a beating heart: the flood pulse. </p>
 
 
 			<div class="photo">
-				<img src="images/flowers.jpg" alt="water drops on orange flowers" width=100%>
+				<img src="images/trees-burned-side.jpg" alt="burnt trees" width=100%>
+			</div>
+
+
+			<p>The wetland, which is larger than Greece and stretches over parts of Brazil, Paraguay and Bolivia, also offers unseen gifts to a vast swath of South America by regulating the water cycle upon which life depends. Its countless swamps, lagoons and tributaries purify water and help prevent floods and droughts. They also store untold amounts of carbon, helping to stabilize the climate. </p>
+
+			<p>For centuries, ranchers have used fire to clear fields and new land. But this year, drought worsened by climate change turned the wetlands into a tinderbox and the fires raged out of control. </p>
+
+			<p>“The extent of fires is staggering,” said Douglas C. Morton, who leads the Biospheric Sciences Laboratory at the NASA Goddard Space Flight Center and studies fire and food production in South America. “When you wipe out a quarter of a biome, you create all kinds of unprecedented circumstances.” </p>
+
+			<p>His analysis showed that at least 22 percent of the Pantanal in Brazil has burned since January, with the worst fires, in August and September, blazing for two months straight. </p>
+
+			<p>Naturally occurring fire plays a role in the Pantanal, in addition to the burning by ranchers. The flames are usually contained by the landscape’s mosaic of water. But this year’s drought sucked these natural barriers dry. The fires raged out of control, far worse than any since satellite records began. </p>
+
+			<p class="chapter-top">2020 is the most active fire year on record for the Pantanal</p>
+
+			<p>The fires are also worse than any in the memory of the Guató people, an Indigenous group whose ancestors have lived in the Pantanal for thousands of years. </p>
+
+			<p>Guató leaders in an Indigenous territory called Baía dos Guató said the fires spread from the ranches that surround their land, and satellite images confirm that the flames swept in from the outside. When fire started closing in on the home of Sandra Guató Silva, a community leader and healer, she fought to save it with the help of her son, grandson and a boat captain with a hose. </p>
+
+			<p>For many desperate hours, she said, they threw buckets of river water and sprayed the area around the house and its roof of thatched palm leaves. They succeeded in defending it, but at least 85 percent of her people’s territory burned, according to Instituto Centro de Vida, a nonprofit group that monitors land use in the area. Throughout the Pantanal, almost half of the Indigenous lands burned, an investigative journalism organization called Agência Pública found. </p>
+
+			<div class="photo">
+				<img src="images/trees-burned-side.jpg" alt="burnt trees" width=100%>
+			</div>
+
+			<p>Now Ms. Guató Silva mourns the loss of nature itself. “It makes me sick,” she said. “The birds don’t sing anymore. I no longer hear the song of the Chaco chachalaca bird. Even the jaguar that once scared me is suffering. That hurts me. I suffer from depression because of this. Now there is a hollow silence. I feel as though our freedom has left us, has been taken from us with the nature that we have always protected.” </p>
+
+			<p>Now these people of the wetlands, some still coughing after weeks of smoke, are depending on donations of water and food. They fear that once the rains come in October, ash will run into the rivers and kill the fish they rely on for their food and livelihood. </p>
+
+			<p>“I couldn’t help but think, our Pantanal is dead,” said Eunice Morais de Amorim, another member of the community. “It is so terrible.” </p>
+
+			<p>Scientists are scrambling to determine an estimate of animals killed in the fires. While large mammals and birds have suffered casualties, many were able to run or fly away. It appears that reptiles, amphibians and small mammals have fared the worst. In places like California, small animals often take refuge underground during wildfires. But in the Pantanal, scientists say, fires burn underground too, fueled by dried-out wetland vegetation. One of the hard-hit places was a national park designated as a United Nations World Heritage site. </p>
+
+			<p>“I don’t want to be an alarmist,” said José Sabino, a biologist at the Anhanguera-Uniderp University in Brazil who studies the Pantanal, “but in a region where 25 percent has burned, there is a huge loss.” </p>
+
+			<p>As the worst flames raged in August and September, biologists, ecotourism guides and other volunteers turned into firefighters, sometimes working 24 hours at a time. Fernando Tortato, a conservation scientist with Panthera, a group that advocates for big cats, visited the Pantanal in early August to install cameras for his research monitoring jaguars and ocelots. But he found the camera sites burned. </p>
+
+			<p>“I said to my boss, I need to change my job,” Mr. Tortato said. “I need to be a firefighter.” Instead of returning home to his family, he spent much of the next two months digging fire breaks with a bulldozer in an urgent attempt to protect forested areas. </p>
+
+			<div class="photo">
+				<img src="images/trees-burned-side.jpg" alt="burnt trees" width=100%>
+			</div>
+
+			<p>One day in September, working under an orange sky, he and his team finished a huge semicircular fire break, using a wide river along one side to protect more than 3,000 hectares, he said, a vital refuge for wildlife. But as the men stood there, pleased with their accomplishment, they watched as flaming debris suddenly jumped the river, igniting the area they thought was safe. They raced into boats and tried to douse the spread, but the flames quickly climbed too high. </p>
+
+			<p>“That’s the moment that we lost hope, almost,” Mr. Tortato said. “But the next day we woke up and started again.” </p>
+
+			<p>Mr. Tortato knows of three injured jaguars, one with third-degree burns on her paws. All were treated by veterinarians. Now, biologists are braced for the next wave of deaths from starvation; first the herbivores, left without vegetation, and then the carnivores, left without the herbivores. </p>
+
+			<p>“It’s a cascade effect,” Mr. Tortato said. </p>
+
+			<p>Animal rescue volunteers have flocked to the Pantanal, delivering injured animals to pop-up veterinary triage stations and leaving food and water for other animals to find. Larissa Prado Campos, a veterinary student, has helped treat wild boar, marsh deer, birds, primates and a raccoon-like creature called a coati. </p>
+
+			<p>“We are working in the middle of a crisis,” Ms. Prado Campos said. “I have woken up many times in the middle of the night to tend to animals here.” </p>
+
+			<p>Last week, the O Globo newspaper reported that firefighting specialists from Brazil's main environmental protection agency were stymied by bureaucratic procedures, delaying their deployment by four months. </p>
+
+			<div class="photo">
+				<img src="images/trees-burned-side.jpg" alt="burnt trees" width=100%>
+			</div>
+
+			<p>Given the historic scope of the fires, their long-term consequences on the Pantanal are unclear. The ecosystem’s grasslands may recover quickly, followed by its shrublands and swamps over the next few years, said Wolfgang J. Junk, a scientist who specializes in the region. But the forests will require decades or centuries. </p>
+
+			<p>Even more critical than the impact of this year’s fires, scientists say, is what they tell us about the underlying health of the wetlands. Like a patient whose high fever signals a dangerous infection, the extent of the wildfires is a symptom of grave threats to the Pantanal, both from inside and out. </p>
+
+			<p>More than 90 percent of the Pantanal is privately owned. Ranchers have raised cattle there for hundreds of years, and ecologists emphasize that many do so sustainably. But new farmers are moving in, often with little understanding of how to use fire properly, said Cátia Nunes, a scientist from the Brazilian National Institute for Science and Technology in Wetlands. Moreover, cattle farming in the highlands has put pressure on local farmers to increase the size of their herds, using more land as they do so. </p>
+
+			<p>Eduardo Eubank Campos, a fifth-generation rancher, remembers his family using controlled burns to clear the land when he was a boy. He said they stopped after adding an ecotourism lodge to their 7,000 hectare property, which now includes reserves and fields on which they raise about 2,000 head of cattle and horses. This year, thanks to firebreaks, a water tank truck and workers quickly trained to fight fire, they were able to keep the flames at bay. The worst impact was on his ecotourism business, hit first by the coronavirus and then by the wildfires. It brings in three-quarters of his revenue. </p>
+
+			<div class="photo">
+				<img src="images/trees-burned-side.jpg" alt="burnt trees" width=100%>
+			</div>
+
+			<p>Mr. Eubank Campos struggles to understand who would set fires when the land was so dry. “Pantaneiros know this is not the time to do burns,” Mr. Eubank Campos said, using a term for the locals that also conveys a culture built up over centuries ranching in the wetland. “They don’t want to destroy their own land.” </p>
+
+			<p>The Brazilian federal police are investigating the fires, some of which appear to have been illegally targeting forests. </p>
+
+			<p>Still, when asked about the biggest threat to the Pantanal, Mr. Eubank Campos’s answer highlights the region’s political and cultural fault lines. “I fear those organizations that come here wanting to exploit the issue and eventually ‘close’ the Pantanal, turn it into one big reserve and kick out the Pantaneiros,” he said. </p>
+
+			<p>Brazil’s president, Jair Bolsonaro, who campaigned on a promise to weaken conservation regulations, is popular in the region. </p>
+
+			<p>But Mr. Eubank Campos agrees with ecologists on a major threat to the Pantanal that comes from its borders and beyond. </p>
+
+			<p>Because ecosystems are interconnected, the well-being of the wetland is at the mercy of the booming agriculture in the surrounding highlands. The huge fields of soy, other grains and cattle — commodities traded around the world — cause soil erosion that flows into the Pantanal, clogging its rivers so severely that some have become accidental dams, robbing the area downstream of water. </p>
+
+			<div class="photo">
+				<img src="images/trees-burned-side.jpg" alt="burnt trees" width=100%>
+			</div>
+
+			<p>The rampant deforestation and related fires in the neighboring Amazon also create a domino effect, disrupting the rainforest’s “flying rivers” of precipitation that contribute to rainfall to the Pantanal. Damming for hydroelectric power deflects water away, scientists say, and a proposal to channelize the wetland’s main river would make it drain too quickly. </p>
+
+			<p>But perhaps the most ominous danger comes from even further afield: climate change. The effects that models have predicted, a much hotter Pantanal alternating between severe drought and extreme rainfall, are already being felt, scientists say. A study published this year found that climate change poses “a critical threat” to the ecosystem, damaging biodiversity and impairing its ability to help regulate water for the continent and carbon for the world. In less than 20 years, it found that the northern Pantanal may turn into a savanna or even an arid zone. </p>
+
+			<p>“We are digging our grave,” said Karl-Ludwig Schuchmann, an ecologist with Brazil’s National Institute of Science and Technology in Wetlands and one of the study’s authors. </p>
+
+			<p>To save the Pantanal, scientists offer solutions: Reduce climate change immediately. Practice sustainable agriculture in and around the wetland. Pay ranchers to preserve forests and other natural areas on their land. Increase ecotourism. Do not divert the Pantanal’s waters, because its flood pulse is its life. </p>
+
+			<p>“Everybody talks about, ‘we have to avoid this and that,’” Dr. Schuchmann said. “But little is done.”</p>
+
+
+			<div class="photo">
+				<img src="images/trees-burned.jpg" alt="burnt trees" width=100%>
 				<p class="caption">Water drops cling to flowers after a storm.<span class="photo-cred">Rachel Logan/JOUR670</span></p>
 			</div>
 
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>		
+
 
 
 			<!--BEGIN Grid system from bootstrap-->
