--- a/Data-viz/bootstrap-template.html
+++ b/Data-viz/bootstrap-template.html
@@ -12,6 +12,7 @@
 	<body>
 
 		<!--BEGIN Jumbotron from bootstrap-->
+		<div class="jumbotron">
 		 <h1 class="display-4">Welcome to the Data Sets!</h1>
 		 <p class="lead">These are the charts I made for the data visualization assignment.</p>
 		 <hr class="my-4">
